--- a/client/src/Card/Card.scss
+++ b/client/src/Card/Card.scss
@@ -1,5 +1,13 @@
 @import "../colorPalette.scss";
 
+.cardDetailView {
+  width: 60%;
+  position: absolute;
+  top: 70px;
+  .Card {
+  }
+}
+
 .Card {
   background-color: white;
   display: flex;
