--- a/client/src/Productos/Productos.scss
+++ b/client/src/Productos/Productos.scss
@@ -1,6 +1,7 @@
 .container {
   display: flex;
   flex-direction: column;
+  width: 60%;
 }
 
 .link {
@@ -8,6 +9,8 @@
 }
 
 .mainContainer {
-  width: 60%;
-  height: 392px;
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
 }
